style.css
body {
    margin: 0;
    padding: 0;
}

.display {
    display: grid;
    grid-template-rows: 1fr 5fr 1fr;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.6rem;
    height: 70px;
    background-color: #C7BEBD;
    color: #1D1B20;
    border-radius: 0 0 10px 10px;
    margin-bottom: 3em;
    box-shadow: 0px 10px 30px -8px rgba(0,0,0,0.54);
}

.book-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 10em;
    margin-inline: 15vw;
}

.book-card {
    text-align: center;
    background-color: #BCD8B7;
    border-radius: 12px;
    align-items: center;
    box-shadow: 0px 10px 30px -8px rgba(0,0,0,0.54);
    height: 200px;
}
.button-container {
    grid-row: 3 / 4;
    margin-inline: auto;
}
.book-add {
    background: #35CE8D;
    border-radius: 20px;
    border: none;
    height: 50px;
    width: 120px;
    box-shadow: 0px 10px 30px -8px rgba(0,0,0,0.54);
}
dialog {
    background-color: #ECE6E0;
    max-width: 400px;
    display: flex;
    justify-content: space-around;
    flex-flow: row wrap;
    border-radius: 30px;
    border: none;
    box-shadow: 1px 10px 26px -3px rgba(0,0,0,0.75);
}

